--- a/Clients-war/nbproject/project.properties
+++ b/Clients-war/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.7.jar=..\\Libreria\\gson-2.7.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.Clients-ejb.dist}
+    ${reference.Clients-ejb.dist}:\
+    ${file.reference.gson-2.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -75,6 +77,7 @@ platform.active=default_platform
 project.Clients-ejb=../Clients-ejb
 reference.Clients-ejb.dist=${project.Clients-ejb}/dist/Clients-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
